--- a/css/main.css
+++ b/css/main.css
@@ -246,7 +246,7 @@ section.landing div.jumbotron div button:hover {
 
 section.featured {
 	width: 100%;
-	background: HSLA(0, 0%, 95%, 1);
+	/*background: HSLA(0, 0%, 95%, 1);*/
 	padding-bottom: 100px;
 	/**/
 
