--- a/css/mini/main.css
+++ b/css/mini/main.css
@@ -7,7 +7,7 @@
 	margin: 0;
 	padding: 0;
 
-	
+
 }
 
 p, li,h1,h2,h3,h4,h5 {
@@ -22,7 +22,9 @@ html, body {
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	/*overflow: hidden;*/
+	  overflow: hidden;
+  overflow-y: scroll;
+
 
 }
 
@@ -39,41 +41,10 @@ ul {
 		NAVIGATION
 **********************************/
 
-
-header.nav-header {
-	position: fixed;
-	top:0;
-	background-color: HSLA(0, 100%, 100%, 0.9);
-	border-top: 4px solid HSLA(0, 69%, 59%, 1);
-	border-bottom: 1px solid black;
-	width: 100%;
-	box-shadow: 0px .5px 3px 0px rgba(0, 0, 0, 0.75);
-	/*position: fixed;
-	top: 0;*/
-	/*box-shadow: 0 6px 4px -4px #999;*/
-}
-
-header.nav-header header.top {
-	height: 90px;
-	width: 100%;
-}
-
-header.nav-header header.top div {
-	
-}
-
-header.nav-header header.top div h2 {
-	color: #000;
-	padding-top: 30px;
-	text-align: center;
-}
-
-header.nav-header header.top div h2 a:hover > span {
-	color: HSLA(0, 58%, 51%, 1);
-}
-
-
 nav.navbar {
+	background: white;
+  position: fixed;
+  top: 0;
 	width: 100%;
 	height: 64px;
 	display: -webkit-box;
@@ -86,9 +57,11 @@ nav.navbar {
 	   -moz-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
-	
-	
+  border-bottom: 1px solid black;
+	border-top: 2px solid HSLA(0, 69%, 59%, 1);
 }
+
+
 
 nav.navbar .nav-content {
 	width: 100%;
@@ -105,31 +78,16 @@ nav.navbar .nav-content {
 	-webkit-flex-flow: row nowrap;
 	    -ms-flex-flow: row nowrap;
 	        flex-flow: row nowrap;
-	-webkit-box-pack: end;
-	-webkit-justify-content: flex-end;
-	   -moz-box-pack: end;
-	    -ms-flex-pack: end;
-	        justify-content: flex-end;
+	-webkit-justify-content: space-around;
+	    -ms-flex-pack: distribute;
+	        justify-content: space-around;
 	-webkit-box-align: center;
 	-webkit-align-items: center;
 	   -moz-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
-	/*margin-right: 100px ;*/
-	/*margin-right: 100px;*/
-}
-
-.nav-content #cart-icon {
-	margin-left: 200px;
-	margin-right: 20px;
-}
-
-.nav-content .logo {
-	position: fixed;
-	left:0;
-	top:20px;
-	padding: 0;
-	margin-left: 25px;
+	min-width: 1250px;
+  margin-left: 80px;
 }
 
 .nav-content li {
@@ -137,25 +95,47 @@ nav.navbar .nav-content {
 	text-transform: uppercase;
 	font-weight: bold;
 	padding-right: 24px;
-	font-size: .9em;
+	font-size: .8rem;
 	-webkit-transition: all 0.2s ease;
 	        transition: all 0.2s ease;
 }
 
-.nav-content li:hover {
+.nav-content li a:hover {
 	color: HSLA(0, 69%, 59%, 1);
 }
 
 .nav-content li.logo img {
-	/*margin-left: -50px;
-	margin-right: 100px;
-*/	width: 50px;
-	
+  	width: 50px;
 }
 
+.nav-content li:first-child {
+	margin-right: 150px;
+	margin-left: -40px;
+}
+
+.nav-content li:last-child {
+  margin-left:auto !important;
+
+}
+
+.nav-content li:last-child a {
+  padding: 7px 15px;
+	font-size: .7rem;
+}
+
+.nav-content li:last-child a:last-child {
+  border-radius: 4px;
+  border: 1px solid HSLA(0, 69%, 59%, 1);
+
+}
+
+.nav-content li:last-child a:last-child:hover {
+  background: HSLA(0, 69%, 59%, 1);
+  color: white;
+}
+
+
 .icon-search-container {
-	/*cursor: pointer;
-	/*background-color: HSLA(0, 70%, 55%, .9);*/
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -moz-box;
@@ -172,7 +152,6 @@ nav.navbar .nav-content {
 	    -ms-flex-align: center;
 	        align-items: center;
 	width: 250px;
-	height: 64px;
 	display: flex;
 	-webkit-box-pack: end;
 	-webkit-justify-content: flex-end;
@@ -187,22 +166,21 @@ nav.navbar .nav-content {
 
 .icon-search {
 	cursor: pointer;
-	
 	width: 25px;
 	height: 25px;
 	margin-left: 10px;
-
-
-	/*border-left: 1px solid black;*/
 }
 
-/*.icon-search-container:hover {
-	background-color: HSLA(0, 80%, 58%, 1);
-}*/
+i.fa-search {
+	margin-left: -40px !important;
+  border-left: 1px solid black;
+  padding-left: 7px;
+  height: 27px;
+  padding-top: 8px;
+}
+
 
 input.search-container {
-	/*display: none;*/
-	/*border-radius: 2px;*/
 	background-color: #eee;
 	color: #444444;
 	padding-left: 10px;
@@ -211,13 +189,13 @@ input.search-container {
 	border-radius: 5px;
 	height: 32px;
 	width: 220px;
-	
+
 }
 
 input:focus {
 	outline: 0;
-	/*border: 2px solid #900;*/
 }
+
 
 
 /**********************************
@@ -235,6 +213,7 @@ section.landing {
 	/*align-items: center;*/
 	width: 100%;
 	height: 100%;
+
 }
 
 section.landing div.jumbotron {
@@ -242,7 +221,7 @@ section.landing div.jumbotron {
 	height: 100%;
 	background: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/landing.jpeg') center center;
 	background: linear-gradient(
-      rgba(0, 0, 0, 0.5), 
+      rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
     ), url('../img/landing.jpeg') center center;
 	background-size: cover;
@@ -263,6 +242,7 @@ section.landing div.jumbotron {
 	    -ms-flex-pack: center;
 	        justify-content: center;
 }
+
 section.landing div.jumbotron div {
 	display: -webkit-box;
 	display: -webkit-flex;
@@ -311,7 +291,7 @@ section.landing div.jumbotron div button {
 section.landing div.jumbotron div button:hover {
 	border: 2px solid HSLA(0, 69%, 59%, 1);
 	color: HSLA(0, 69%, 59%, 1);
-	
+
 }
 
 
@@ -322,16 +302,17 @@ section.landing div.jumbotron div button:hover {
 
 section.featured {
 	width: 100%;
-	background: HSLA(0, 0%, 95%, 1);
+	/*background: HSLA(0, 0%, 95%, 1);*/
+	padding-bottom: 100px;
 	/**/
-	
+
 }
 
 
 section.featured  h2 {
 	text-transform: uppercase;
 	text-align: center;
-	padding-top: 50px;
+	padding-top: 100px;
 	padding-bottom: 5px;
 	letter-spacing: .05em;
 	color:HSLA(0, 69%, 59%, 1);
@@ -347,7 +328,7 @@ section.featured > hr {
 
 section.featured div.featured-items {
 	width: 80%;
-	margin-left: 10%;	
+	margin-left: 10%;
 
 
 }
@@ -387,22 +368,24 @@ section.featured div.featured-items ul li {
 	margin-top: 50px;
 	border-radius: 5px;
 	margin-right: 1px;
-	border: 2px solid transparent;
+	/*border: 2px solid transparent;*/
 	-webkit-transition: all .3s ease;
 	        transition: all .3s ease;
+	min-width: 200px;
+	padding: 10px;
 
 
 }
 
 section.featured div.featured-items ul li:hover {
-	border: 2px solid #DF4E4E;
+	/*border: 2px solid #DF4E4E;*/
 	color: #DF4E4E;
 }
 
 section.featured div.featured-items ul li img {
 	-moz-box-sizing: border-box;
 	     box-sizing: border-box;
-	height: 300px;
+	width: 250px;
 	padding: 25px;
 }
 
@@ -438,6 +421,28 @@ div.info hr {
 	/*height: .5em;*/
 	margin: auto;
 	border: 0;
+}
+
+/*********************************
+			FOOOTER
+*********************************/
+
+
+footer {
+	width: 100%;
+	height: 200px;
+	background: HSLA(0, 0%, 10%, 1);
+}
+
+footer p {
+	color: #fff;
+	text-align: center;
+	position: relative;
+	top: 160px;
+}
+
+footer p span {
+	color: HSLA(0, 0%, 40%, 1);
 }
 
 
@@ -575,18 +580,26 @@ div.product-btn {
 }
 
 div.product-btn button.btn-console, div.product-btn button.btn-cart {
-	width: 200px;
-	height: 50px;
-	padding: 5px;
+
+	padding: 20px 60px;
 	font-weight: bold;
-	color: #fff;
-	border: 0;
+	color: HSLA(0, 69%, 59%, 1);
+	border: 2px solid HSLA(0, 69%, 59%, 1);
+	border-radius: 5px;
+	background-color: HSLA(0, 0%, 100%, 1);
+	outline: 0;
 
 }
 
 div.product-btn button:first-child {
 	margin-right: 50px;
+}
+
+
+
+div.product-btn button:hover {
 	background-color: HSLA(0, 69%, 59%, 1);
+	color: #fff;
 }
 
 
@@ -626,7 +639,7 @@ header.cart-header div {
 	margin-top: 25px;
 	margin-right: 25px;
 
-	
+
 }
 
 
@@ -638,15 +651,15 @@ header.cart-header div {
 div.cart-content {
 	width: 100%;
 	height: 90%;
-	
+
 	display: -webkit-box;
-	
+
 	display: -webkit-flex;
-	
+
 	display: -moz-box;
-	
+
 	display: -ms-flexbox;
-	
+
 	display: flex;
 	-webkit-flex-flow: row wrap;
 	    -ms-flex-flow: row wrap;
@@ -656,7 +669,7 @@ div.cart-content {
 div.item-wrapper {
 	width: 50%;
 	/*background: blue;*/
-	
+
 
 }
 
@@ -686,8 +699,8 @@ ul.item-content li {
 	   -moz-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
-	border-bottom: 1px solid black; 
-	
+	border-bottom: 1px solid black;
+
 }
 
 ul.item-content li div:first-child {
@@ -737,7 +750,7 @@ div.cart-total em {
 }
 
 div.cart-total a {
-	
+
 	/*width: 50px;*/
 	border: 2px solid HSLA(359, 68%, 59%, 1);
 	border-radius: 25px;
@@ -756,25 +769,354 @@ div.cart-total a:hover {
 }
 
 
+/***********************************
+			SEARCH PAGE
+*************************************/
+
+.result-wrapper {
+	width: 100%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	   -moz-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	padding-top: 100px;
+	padding-bottom: 100px;
+
+
+}
+
+div.search-wrapper {
+	width: 50%;
+	/*background: blue;*/
+
+
+}
+
+ul.search-content {
+	height: 100%;
+	width: 100%;
+	/*padding: 20px;*/
+}
+
+ul.search-content li {
+	height: 200px;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-flex-flow: row wrap;
+	    -ms-flex-flow: row wrap;
+	        flex-flow: row wrap;
+	-webkit-box-pack: end;
+	-webkit-justify-content: flex-end;
+	   -moz-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	   -moz-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	border-bottom: 1px solid black;
+
+}
+
+ul.search-content li div:first-child {
+	margin-right: 30px;
+	margin-left: 20px;
+}
+
+ul.search-content li div:last-child {
+	margin-left: auto;
+	font-weight: bold;
+}
+
+ul.search-content li div:last-child button {
+	padding: 10px 20px;
+	background: #fff;
+	color: #000;
+	border: 1.5px solid #000;
+	border-radius: 5px;
+	-webkit-transition: all .3s ease;
+	        transition: all .3s ease;
+}
+
+ul.search-content li div:last-child button:hover {
+	border: 1.5px solid HSLA(359, 81%, 61%, 1);
+	color: HSLA(359, 81%, 61%, 1);
+}
+
+ul.search-content li img {
+	height: 150px;
+}
+
+
+/*******************************
+		SIGN UP PAGE
+*********************************/
+
+section#sign-up-form {
+	-moz-box-sizing: border-box;
+	     box-sizing: border-box;
+	padding: 25px;
+	margin: 20px auto;
+	width: 100%;
+	max-width: 550px;
+	min-width: 500px;
+	font-size: 1.2em;
+	border-radius: 5px;
+	/*border: 2px solid red;*/
+	color: #fff;
+	/*background: HSLA(0, 0%, 10%, 1);*/
+	color: black;
 
 
 
 
+}
+
+section#sign-up-form hr {
+	border: 0;
+	background: HSLA(359, 81%, 61%, 1);
+	height: 3px;
+	border-radius: 2px;
+	margin-top: 5px;
+}
+
+section#sign-up-form form {
+	max-width: 500px;
+	min-width: 450px;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-flex-flow: column nowrap;
+	    -ms-flex-flow: column nowrap;
+	        flex-flow: column nowrap;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	   -moz-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	margin: 0 auto;
+
+
+}
+
+section#sign-up-form form label {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-flex-flow: row no wrap;
+	    -ms-flex-flow: row no wrap;
+	        flex-flow: row no wrap;
+	-webkit-box-pack: justify;
+	-webkit-justify-content: space-between;
+	   -moz-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	   -moz-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	padding: 15px;
+}
+
+section#sign-up-form form label i {
+	margin-right: 20px;
+	/*color: HSLA(359, 81%, 61%, 1) ;*/
+}
+
+section#sign-up-form form label input{
+	margin-left: auto;
+	padding: 5px;
+	border-radius: 5px;
+	height: 40px;
+	width: 250px;
+	border: 1px solid rgba(0,0,0, 0.2);
+	/*font-size: 200px;*/
+	color: #000;
+
+}
+
+section#sign-up-form form > input {
+	width: 100px;
+	margin: 0 auto;
+	padding: 10px;
+	border: 1px solid HSLA(359, 81%, 61%, 1);
+	color: HSLA(359, 81%, 61%, 1);
+	font-weight: bold;
+	background: #fff;
+	border-radius: 5px;
+}
+
+section#sign-up-form form > input:hover {
+	/*border: 1px solid HSLA(359, 81%, 61%, 1);*/
+	color: #fff;
+	background: HSLA(359, 81%, 61%, 1);
+}
+
+
+/**********************
+	TRATION SUCCESS
+************************/
+
+section.registered {
+	width: 100%;
+	height: 50%;
+	margin-top: 64px;
+
+}
+
+section.registered div.registration-content {
+	width: 80%;
+	height: 60px;
+	padding: 5px;
+	background: RGB(227, 237, 218);
+	margin: 0 auto;
+	text-align: center;
+	border-radius: 4px;
+	color: RGB(97, 120, 50);
+	margin-top: 200px;
+}
+
+section.registered div.registration-content span {
+	color: RGB(69, 112, 57);
+	font-size: larger;
+	font-weight: 700;
+}
 
 
 
+/**********************
+	MEDIA QUERIES
+************************/
 
 
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 1200px) /*  and (-webkit-min-device-pixel-ratio: 2) */
+{
+
+	  section.featured div.featured-items {
+			width: 100%;
+
+		}
+
+	  section.featured div.featured-items ul {
+			width: 100%;
+			display: -webkit-box;
+			display: -webkit-flex;
+			display: -moz-box;
+			display: -ms-flexbox;
+			display: flex;
+			-webkit-flex-flow: column nowrap;
+			    -ms-flex-flow: column nowrap;
+			        flex-flow: column nowrap;
+			-webkit-box-pack: justify;
+			-webkit-justify-content: space-between;
+			   -moz-box-pack: justify;
+			    -ms-flex-pack: justify;
+			        justify-content: space-between;
+		}
+
+		section.featured div.featured-items ul li {
+			width: 100%;
+			display: -webkit-box;
+			display: -webkit-flex;
+			display: -moz-box;
+			display: -ms-flexbox;
+			display: flex;
+			-webkit-box-pack: center;
+			-webkit-justify-content: center;
+			   -moz-box-pack: center;
+			    -ms-flex-pack: center;
+			        justify-content: center;
+			-webkit-flex-flow: row wrap;
+			    -ms-flex-flow: row wrap;
+			        flex-flow: row wrap;
+			margin-top: 50px;
+			border-radius: 5px;
+			margin-right: 1px;
+			border: 2px solid transparent;
+			-webkit-transition: all .3s ease;
+			        transition: all .3s ease;
+			text-align: center;
 
 
+		}
 
+		section.featured div.featured-items ul li img {
+			-moz-box-sizing: border-box;
+			     box-sizing: border-box;
+			height: 500px;
+/*			padding: 25px;*/
+		}
 
+		nav.navbar .nav-content {
+/*			display: none;*/
+			overflow: scroll;
+		}
 
+		nav.navbar .nav-content li:first-child,nav.navbar .nav-content li:last-child {
+			display:none;
+/*			overflow: scroll;*/
+		}
 
+		nav.navbar .nav-content {
+			  width: 100%;
 
+			  display: -webkit-box;
 
+			  display: -webkit-flex;
 
+			  display: -moz-box;
 
+			  display: -ms-flexbox;
 
+			  display: flex;
+			  -webkit-flex-flow: column;
+			      -ms-flex-flow: column;
+			          flex-flow: column;
+			  -webkit-box-pack: center;
+			  -webkit-justify-content: center;
+			     -moz-box-pack: center;
+			      -ms-flex-pack: center;
+			          justify-content: center;
+			  -webkit-box-align: center;
+			  -webkit-align-items: center;
+			     -moz-box-align: center;
+			      -ms-flex-align: center;
+			          align-items: center;
+			  position: fixed;
+			  top: 64px;
+			  background: #010;
+			  color: white;
 
+			}
 
+			.nav-content li {
+				  color: white;
+				  text-transform: uppercase;
+				  font-weight: bold;
+				  padding: 10px;
+				  font-size: .9em;
+				  -webkit-transition: all 0.2s ease;
+				          transition: all 0.2s ease;
+				  border-bottom: 1px solid grey;
+				  width: 100%;
+				  text-align: center;
+			}
+
+}
